fix: remove pointer events on collapsed banner

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -18576,6 +18576,7 @@ h4 {
             [data-bleh--profile_header_expand="false"] & {
                 opacity: 0;
                 height: 0;
+                pointer-events: none;
             }
         }
 
